<resources>
    <string name="app_name">Прямоугольный параллелепипед</string>
    <string name="side_a_text">a</string>
    <string name="side_b_text">b</string>
    <string name="side_c_text">c</string>
    <string name="equals">=</string>
    <string name="find">Найти</string>
    <string name="result">Результат</string>

    <string-array name="Operations">
        <item>Сумма длины сторон</item>
        <item>Длина диагонали</item>
        <item>Площадь полной поверхности</item>
        <item>Объем прямоугольного параллелепипеда</item>
    </string-array>
</resources>
