<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/side_a_label"
            android:text="@string/side_a_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/side_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/equals"
            android:inputType="numberDecimal"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/side_b_label"
            android:text="@string/side_b_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/side_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/equals"
            android:inputType="numberDecimal"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/side_c_label"
            android:text="@string/side_c_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/side_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="numberDecimal"
            android:hint="@string/equals"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:entries="@array/Operations"
        />

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find"/>

    <TextView
        android:id="@+id/solution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/result"/>

</androidx.appcompat.widget.LinearLayoutCompat>